@@ -49,7 +49,7 @@ import java.util.concurrent.atomic.AtomicReference;
  */
 public class ChunkyLauncher {
 
-  public static final String LAUNCHER_VERSION = "v1.9.4";
+  public static final String LAUNCHER_VERSION = "v1.10.0";
 
   protected String java;
 
