@@ -1,0 +1,48 @@
+/*
+ * Copyright (c) 2017 Jesper Öqvist <jesper@llbit.se>
+ *
+ * This file is part of Chunky.
+ *
+ * Chunky is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Chunky is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with Chunky.  If not, see <http://www.gnu.org/licenses/>.
+ */
+package se.llbit.chunky.launcher.ui;
+
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
+import javafx.scene.image.Image;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyEvent;
+import javafx.stage.Stage;
+
+import java.io.IOException;
+
+/**
+ * Plugin manager window.
+ * Allows rearranging the load order, and adding/removing plugins.
+ */
+public class PluginManager extends Stage {
+  public PluginManager() throws IOException {
+    FXMLLoader loader = new FXMLLoader(getClass().getResource("PluginManager.fxml"));
+    Parent root = loader.load();
+    setTitle("Plugin Manager");
+    getIcons().add(new Image(getClass().getResourceAsStream("chunky-cfg.png")));
+    Scene scene = new Scene(root);
+    addEventFilter(KeyEvent.KEY_PRESSED, event -> {
+      if (event.getCode() == KeyCode.ESCAPE) {
+        hide();
+      }
+    });
+    setScene(scene);
+  }
+}
